<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".offScoreBoard">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bluebg" />

        <LinearLayout
            android:id="@+id/lilayout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dp">

<!--            <ImageView-->
<!--                android:id="@+id/goBack"-->
<!--                android:layout_width="48dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:contentDescription="@string/img_home"-->
<!--                app:srcCompat="@drawable/left" />-->

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/glassmorphism"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.425">

                <TextView
                    android:id="@+id/scoreTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futura_display"
                    android:padding="20dp"
                    android:text="Your Score"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/scoreFinishOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/futura_display"
                    android:padding="20dp"
                    android:text="@string/load"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="40sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/summary"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:fontFamily="@font/futura_display"-->
                    <!--                        android:padding="0dp"-->
                    <!--                        android:text="Time Duration : "-->
                    <!--                        android:textColor="@color/white"-->
                    <!--                        android:textSize="30sp" />-->

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura_display"
                        android:padding="0dp"
                        android:text="@string/time_duration"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura_display"
                        android:padding="0dp"
                        android:text="@string/time_duration"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/backScore"
                    android:layout_width="122dp"
                    android:layout_height="41dp"
                    android:contentDescription="@string/go_home"
                    app:srcCompat="@drawable/left" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>






    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>