<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderVersionTwo">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bluebg" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/Testing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_display"
                android:text="Revoltix"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/futura_display"
                android:text="Leaderboards"
                android:textColor="@color/yellow"
                android:textSize="60sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="287dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userListNewLead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="282dp"
            android:layout_marginBottom="113dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/futura_display"
                android:text="Your Rank"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/leaderb_radius"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="500dp">

                    <ImageView
                        android:id="@+id/ProfilePicture"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtNameUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/futura_display"
                            android:letterSpacing="0.1"
                            android:text="@string/sample_name"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/txtEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_rmail"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/txtScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_rmail"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/RankLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rank"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/RankVal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rank"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>